feat: asymmetrical dices results generating

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 .Rproj.user/F99392A0/sources/session-b9d0c222/A321DEE6
 .Rproj.user/F99392A0/sources/session-b9d0c222/A321DEE6-contents
 .Rproj.user/F99392A0/sources/session-b9d0c222/lock_file
+.Rproj.user/
